<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/woeid"
     />

<EditText
    android:id="@+id/txtlocation"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="text" />

<Button android:id="@+id/get_weatherbt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/show_weather"
		android:layout_gravity="center"
		/> 

<ImageView 
    android:id="@+id/imview_weather"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:contentDescription="@string/img_weather"/>

<TextView
		    android:id="@+id/txt_view"
		    android:layout_width="300dp"
		    android:textSize="12sp"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="16dp"
		    android:gravity="left" />

</LinearLayout>
